# histopia

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  tests.yml
constraints/: registration-repro.txt  semantic-repro.txt
docs/: README.md  dependency_management.md  github_pages_showcase.md  kpf_registration_validation.md  qupath.md  registration.md  semantic_atlas.md
docs/superpowers/plans/: 2026-07-22-seven-mouse-semantic-validation.md  2026-07-22-visualization-module.md
docs/superpowers/specs/: 2026-07-22-seven-mouse-semantic-validation-design.md  2026-07-22-visualization-module-design.md
examples/: README.md  registration_config.toml  semantic_atlas_config.toml
scripts/: validate_kpf_full_resolution.py  validate_kpf_nonrigid.py  validate_kpf_nonrigid_full_resolution.py
src/histopia/: __init__.py  _vips_image.py
src/histopia/compute/: __init__.py  _runtime.py
src/histopia/qupath/: __init__.py  _cli.py  _export.py
src/histopia/registration/: __init__.py  _approval.py  _cli.py  _config.py  _errors.py  _io.py  _manifest.py  _masking.py  _nonrigid.py  _ordering.py  _ordering_cache.py  _orientation.py  _pipeline.py  _preprocessing_cache.py  _qc.py  _review.py  _rigid.py  _slides.py  _validation.py  _viewer.py  _wsi.py
src/histopia/semantic/: __init__.py  _atlas.py  _batch.py  _cli.py  _config.py  _correspondence.py  _extract.py  _features.py  _graph.py  _pipeline.py  _preflight.py  _qc.py  _result.py  _result_validation.py  _selection.py  _uni2h.py  _vips.py
src/histopia/visualization/: __init__.py  _cli.py  _qc_showcase.py  _review_portal.py  _server.py  _showcase.py  _viewer.py
tests/: test_compute.py  test_dependency_profiles.py  test_metadata.py  test_project_configuration.py  test_qupath_export.py  test_registration_approval.py  test_registration_cli.py  test_registration_manifest.py  test_registration_masking.py  test_registration_nonrigid.py  test_registration_ordering.py  test_registration_ordering_cache.py  test_registration_orientation.py  test_registration_pipeline.py  test_registration_preprocessing_cache.py  test_registration_review_and_viewer.py  test_registration_rigid.py  test_registration_slides.py  test_registration_wsi.py  test_semantic_atlas.py  test_semantic_batch.py  test_semantic_cli.py  test_semantic_config.py  test_semantic_correspondence.py  test_semantic_extraction_cache.py  test_semantic_features.py  test_semantic_graph.py  test_semantic_preflight.py  test_semantic_qc.py  test_semantic_result.py  test_semantic_selection.py  test_semantic_uni2h.py  test_visualization_api.py  test_visualization_browser.py  test_visualization_cli.py  test_visualization_cohort.py  test_visualization_qc_showcase.py  test_visualization_review_portal.py  test_visualization_server.py  test_visualization_showcase.py
