[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "histopia"
version = "0.1.0.dev0"
description = "Histology Spatial Topology for Omics Profiling and Inter-section Alignment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "License pending" }
authors = [
    { name = "Oncology Lab" },
]
keywords = [
    "computational-pathology",
    "histology",
    "image-registration",
    "spatial-omics",
    "tissue-sections",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "tomli>=1.1; python_version < '3.11'",
]

[project.optional-dependencies]
registration = [
    "numpy>=1.26,<3",
    "opencv-contrib-python-headless>=4.8,<6",
    "scipy>=1.11,<2",
]
wsi = [
    "pillow>=10,<13",
    "pyvips>=2.2,<4",
    "tifffile>=2024.8",
]
registration-repro = [
    "numpy==2.2.6",
    "opencv-contrib-python-headless==5.0.0.93",
    "pillow==12.3.0",
    "pyvips==3.1.1",
    "scipy==1.15.3",
    "tifffile==2025.5.10",
]
semantic = [
    "numpy>=1.26,<3",
    "pillow>=10,<13",
    "scikit-learn>=1.5,<2",
    "scipy>=1.11,<2",
]
qupath = [
    "numpy>=1.26,<3",
]
uni2h = [
    "huggingface-hub>=0.34,<1",
    "numpy>=1.26,<3",
    "pillow>=10,<13",
    "pyvips>=2.2,<4",
    "scikit-learn>=1.5,<2",
    "scipy>=1.11,<2",
    "timm>=1.0.19,<2",
    "tifffile>=2024.8",
    "torch>=2.8,<3",
    "torchvision>=0.23,<1",
]
semantic-repro = [
    "numpy==2.2.6",
    "pillow==12.3.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
]
browser-test = [
    "playwright>=1.50,<2",
    "pytest>=8",
]
dev = [
    "build>=1.2",
    "pytest>=8",
    "ruff>=0.6",
    "twine>=5",
]

[project.scripts]
histopia-register = "histopia.registration._cli:main"
histopia-semantic = "histopia.semantic._cli:main"
histopia-visualize = "histopia.visualization._cli:main"
histopia-qupath = "histopia.qupath._cli:main"

[project.urls]
Homepage = "https://github.com/oncologylab/histopia"
Documentation = "https://github.com/oncologylab/histopia/tree/main/docs"
Interactive-Demo = "https://oncologylab.github.io/histopia/"
QuPath-Extension = "https://github.com/oncologylab/qupath-extension-histopia/releases/latest"
Repository = "https://github.com/oncologylab/histopia"
Issues = "https://github.com/oncologylab/histopia/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/histopia"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "browser: headless browser checks requiring Playwright Chromium",
    "integration: local tests that require external image data or optional WSI dependencies",
    "uni2h: local tests that require a gated UNI2-h checkpoint and GPU dependencies",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
